# hades-research-bot

./: .env.example  .gitignore  Cargo.toml  README.md
results/: 3uWp67T7FswYHfhmT5t8UJZgSJBsZ9cLYSRQe3Sjpump.json  7THHqh6vCtPHXjeU6YEJc9sAupwJeZbpCtN3ntfqpump.json  7gitGMktvAhvvKRiVbe8Q93m5Mu5KLHMTegzcGzpump.json  7j6VDtVG8FuP2bmzeZuZCFfz8sordp4mUqYDgnMgetcg.json  FNpK6anEbnx9PMrwA6aeiUXWF4hJqvbtXLdLM7ALpump.json  J6gefFyTPhWWRdu2LhMy8PFmAuCftgTJ5pbMym36pump.json  WH7jyjmgpKH5q5YtmJGUZJHwXyBsfqVzCVYdgn1pump.json
src/: analysis.rs  lib.rs  main.rs  rpc.rs  types.rs
