[package]
name = "hades-research-bot"
version = "0.0.1"
edition = "2024"
description = "Analyze pump.fun tokens to reverse-engineer bot configurations"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
